Update and rename config_sample.env to config.env

--- a/config.env
+++ b/config.env
@@ -1,10 +1,8 @@
-# Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
 # REQUIRED CONFIG
-BOT_TOKEN = ""                              # Require restart after changing it while bot running
-OWNER_ID = ""                               # Require restart after changing it while bot running
-TELEGRAM_API = ""                           # Require restart after changing it while bot running
-TELEGRAM_HASH = ""                          # Require restart after changing it while bot running
+BOT_TOKEN = "5042004134:AAGdVroCkWeHDZe3QNol7SIOySBq2BVeJo4"                              # Require restart after changing it while bot running
+OWNER_ID = "1095091493"                               # Require restart after changing it while bot running
+TELEGRAM_API = "6145902"                           # Require restart after changing it while bot running
+TELEGRAM_HASH = "bf6bba98b9802bc574875eaa9734f6b2"                          # Require restart after changing it while bot running
 # OPTIONAL CONFIG
 USER_SESSION_STRING = ""                    # Require restart after changing it while bot running
 DATABASE_URL = ""                           # Require restart after changing it while bot running
